@@ -53,6 +53,7 @@ importFrom(graphics,box)
 importFrom(graphics,grid)
 importFrom(graphics,locator)
 importFrom(graphics,title)
+importFrom(mapedit,drawFeatures)
 importFrom(mapedit,selectFeatures)
 importFrom(maps,map.axes)
 importFrom(maptools,checkPolygonsHoles)
